REVISION:7.0. Cambios generales, pero sobretodo en la GUI. Ver log detallado en ~/doc/changelog/Rev7.0.googlecode.txt

--- a/doc/GuiaDesarrollo/VersionActual/Variables.tex
+++ b/doc/GuiaDesarrollo/VersionActual/Variables.tex
@@ -42,10 +42,10 @@
 		
 		% -- F -- %
 		\item[Feedback] Variable booleana ¿Hay una feedback control rule? CONTROL
-		\item[Flag\_Rec\_Fish{[}Nareas,Nages{]}] Toma valor 1 en Preliminary\_Calcs. Se utiliza en popdyn(). 1 (por defecto) indica que la edad no ha sido reclutada. 2 que ha sido parcialmente reclutada y 3 que está totalmente reclutada.
+		\item[Flag\_Partial\_Rec{[}Nareas,Nages{]}] Toma valor 1 en Preliminary\_Calcs. Se utiliza en popdyn(). 1 (por defecto) indica que la edad no ha sido reclutada. 2 que ha sido parcialmente reclutada y 3 que está totalmente reclutada.
 		\item[frac{[}Nareas, Nages, NpulsosMax{]}] Toma valor 1 en Preliminary\_Calcs. Indica la fración de la población que es extraída en cada pulso de pesca.
 		\item[FracMat{[}Nage{]}] Matriz con 1s y 0s para indicar qué edades son maduras y cuales no. 
-		\item[FracSel{[}Nareas, Nages{]}] Proporción de la población que puede ser extraída por pesca para cada edad. 
+		\item[FracSel{[}Nareas, Nages{]}] Selectividad a la edad. 
 		   
 		% -- G -- %
 		\item[g{[}Nareas{]}] Fracción de reducción de crecimiento cuando hay efectos densodependientes. Con este valor se calculan las Alphas y Betas para hallar la talla.
